Added the report to the notebook

--- a/Project/NooteBook.ipynb
+++ b/Project/NooteBook.ipynb
@@ -1082,9 +1082,30 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b29882ff-215a-458e-a3e1-6cd3b291f04c",
+   "metadata": {},
+   "source": [
+    "### Report\n",
+    "\n",
+    "-if Oldpeak over 2 the patiant is most likely to have heart problems\n",
+    "- MaxHR if it is under it is 100 it is most likely for them to have heart problems \n",
+    "- RestBP for sure related to heart problems \n",
+    "- of course  we know that if the when age gets older the chance is higher for this person to have heart problems\n",
+    "- The dataset have 206 while only having 97 women, which will mean that the model we will have will probably work best for men while being a little off when asked about women \n",
+    "\n",
+    "- now i did all of this using a .py sicne if felt easier for now (i did not try the notebook i will have to set it up later)\n",
+    "- i made a lot of comments in the .py file , i dont know if there is a better way (i dont want to rewrite a lot of the same code thats why i put them in comments if needed them i use them then put them back again) \n",
+    "\n",
+    "\n",
+    "----- I know there is a room for improvements but i feel i gave it all i have------\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c3e50f59-1aa2-436c-83a2-869c04737e5f",
+   "id": "33a15d48-6da6-4987-82cf-40540dbae58d",
    "metadata": {},
    "outputs": [],
    "source": []
