trainded all the models, Made the confuion matrix for all the model

--- a/Project/Try2.ipynb
+++ b/Project/Try2.ipynb
@@ -2,7 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
+   "id": "ded05f48-7883-4ea3-8728-2510034b0e54",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install category_encoders"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "d6bc3599-ecc8-4926-8e76-821d3d920693",
    "metadata": {},
    "outputs": [],
@@ -26,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "260b069f-ccef-4c49-a6c1-09234759876f",
    "metadata": {},
    "outputs": [],
@@ -36,170 +46,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "237c3480-58b5-4ee9-9c53-897b0e42d1c1",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Age</th>\n",
-       "      <th>Sex</th>\n",
-       "      <th>RestBP</th>\n",
-       "      <th>Chol</th>\n",
-       "      <th>Fbs</th>\n",
-       "      <th>RestECG</th>\n",
-       "      <th>MaxHR</th>\n",
-       "      <th>ExAng</th>\n",
-       "      <th>Oldpeak</th>\n",
-       "      <th>Slope</th>\n",
-       "      <th>Ca</th>\n",
-       "      <th>Thal</th>\n",
-       "      <th>Target</th>\n",
-       "      <th>CP_nonanginal</th>\n",
-       "      <th>CP_nontypical</th>\n",
-       "      <th>CP_typical</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>63</td>\n",
-       "      <td>1</td>\n",
-       "      <td>145</td>\n",
-       "      <td>233</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>150</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2.3</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>fixed</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>67</td>\n",
-       "      <td>1</td>\n",
-       "      <td>160</td>\n",
-       "      <td>286</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>108</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1.5</td>\n",
-       "      <td>2</td>\n",
-       "      <td>3</td>\n",
-       "      <td>normal</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>67</td>\n",
-       "      <td>1</td>\n",
-       "      <td>120</td>\n",
-       "      <td>229</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>129</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2.6</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>reversable</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>37</td>\n",
-       "      <td>1</td>\n",
-       "      <td>130</td>\n",
-       "      <td>250</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>187</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3.5</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>normal</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>41</td>\n",
-       "      <td>0</td>\n",
-       "      <td>130</td>\n",
-       "      <td>204</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>172</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1.4</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>normal</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   Age  Sex  RestBP  Chol  Fbs  RestECG  MaxHR  ExAng  Oldpeak  Slope  Ca  \\\n",
-       "0   63    1     145   233    1        2    150      0      2.3      3   0   \n",
-       "1   67    1     160   286    0        2    108      1      1.5      2   3   \n",
-       "2   67    1     120   229    0        2    129      1      2.6      2   2   \n",
-       "3   37    1     130   250    0        0    187      0      3.5      3   0   \n",
-       "4   41    0     130   204    0        2    172      0      1.4      1   0   \n",
-       "\n",
-       "         Thal  Target  CP_nonanginal  CP_nontypical  CP_typical  \n",
-       "0       fixed       0              0              0           1  \n",
-       "1      normal       1              0              0           0  \n",
-       "2  reversable       1              0              0           0  \n",
-       "3      normal       0              1              0           0  \n",
-       "4      normal       0              0              1           0  "
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "data.head()"
    ]
@@ -216,79 +66,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "e11e9025-b713-4fdb-985d-79db28b43922",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>normal</th>\n",
-       "      <th>reversable</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   normal  reversable\n",
-       "0       0           0\n",
-       "1       1           0\n",
-       "2       0           1\n",
-       "3       1           0\n",
-       "4       1           0"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "dum.head()"
    ]
@@ -752,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "id": "76b0e6ce-ce63-4b30-bc83-73049492941a",
    "metadata": {},
    "outputs": [],
@@ -946,7 +727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "f2b2a628-6a1b-405c-9891-bc6290277a26",
    "metadata": {},
    "outputs": [
@@ -1638,7 +1419,7 @@
        "LogisticRegression(max_iter=1000, random_state=42)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1650,7 +1431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "4433ffd8-8c57-4978-a7a3-eac422bbc6ae",
    "metadata": {},
    "outputs": [
@@ -1660,7 +1441,7 @@
        "0.8583333333333333"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1671,7 +1452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 20,
    "id": "aca6d6c5-c4e4-4a81-afa4-df3a1b1ab393",
    "metadata": {},
    "outputs": [
@@ -1681,7 +1462,7 @@
        "0.8833333333333333"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1692,7 +1473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 21,
    "id": "f2d68e87-d029-4754-9c11-52cf82d9f9b7",
    "metadata": {},
    "outputs": [],
@@ -1702,7 +1483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 22,
    "id": "2d23e173-9656-4b54-bf19-57bbcefc8c60",
    "metadata": {},
    "outputs": [],
@@ -1712,17 +1493,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 28,
    "id": "4423fecf-6bbe-403f-91f4-644488681858",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x1bf65cfd7f0>"
+       "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x16a5ee65310>"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1745,8 +1528,178 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 29,
+   "id": "4bb99c43-9a6b-4dcc-896e-572b00fa315b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Sex</th>\n",
+       "      <th>RestBP</th>\n",
+       "      <th>Chol</th>\n",
+       "      <th>Fbs</th>\n",
+       "      <th>RestECG</th>\n",
+       "      <th>MaxHR</th>\n",
+       "      <th>ExAng</th>\n",
+       "      <th>Oldpeak</th>\n",
+       "      <th>Slope</th>\n",
+       "      <th>Ca</th>\n",
+       "      <th>CP_nonanginal</th>\n",
+       "      <th>CP_nontypical</th>\n",
+       "      <th>CP_typical</th>\n",
+       "      <th>normal</th>\n",
+       "      <th>reversable</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>232</th>\n",
+       "      <td>54</td>\n",
+       "      <td>0</td>\n",
+       "      <td>160</td>\n",
+       "      <td>201</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>163</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>59</th>\n",
+       "      <td>51</td>\n",
+       "      <td>1</td>\n",
+       "      <td>125</td>\n",
+       "      <td>213</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>125</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>62</td>\n",
+       "      <td>0</td>\n",
+       "      <td>140</td>\n",
+       "      <td>268</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>160</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3.6</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>185</th>\n",
+       "      <td>66</td>\n",
+       "      <td>1</td>\n",
+       "      <td>160</td>\n",
+       "      <td>246</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>120</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>173</th>\n",
+       "      <td>57</td>\n",
+       "      <td>1</td>\n",
+       "      <td>152</td>\n",
+       "      <td>274</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>88</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Age  Sex  RestBP  Chol  Fbs  RestECG  MaxHR  ExAng  Oldpeak  Slope  Ca  \\\n",
+       "232   54    0     160   201    0        0    163      0      0.0      1   1   \n",
+       "59    51    1     125   213    0        2    125      1      1.4      1   1   \n",
+       "6     62    0     140   268    0        2    160      0      3.6      3   2   \n",
+       "185   66    1     160   246    0        0    120      1      0.0      2   3   \n",
+       "173   57    1     152   274    0        0     88      1      1.2      2   1   \n",
+       "\n",
+       "     CP_nonanginal  CP_nontypical  CP_typical  normal  reversable  \n",
+       "232              1              0           0       1           0  \n",
+       "59               0              0           1       1           0  \n",
+       "6                0              0           0       1           0  \n",
+       "185              0              1           0       0           0  \n",
+       "173              0              0           0       0           1  "
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "40f23752-024b-4785-b232-6d679eb40228",
+   "id": "217be165-6187-43cb-b22e-09adc1af997e",
    "metadata": {},
    "outputs": [],
    "source": []
